2005-01-08  Matthias Trute <mtrute@users.sourceforge.net>

 * XML configuration ignores property number for definition of
   busses. They are simply numbered as they appear in the configuration.
   The API for the register_bus_XX functions has changed to reflect this.
 * DDL changes (mostly untested but should work)
    - short detection
    - automatic deactivation of GA after specified delay
    - emergency stop for GL (M protocols)
 
2005-01-02  Frank Schmischke  <frank.schmischke@t-online.de>

 * ib.c: use of watchdog added
 * Makefile.am: remove all references to no longer needed ibox-kernel-modul

2004-11-04 Matthias Trute <mtrute@users.sourceforge.net>

 * varios files : reinit made possible, loopback and 605x
    with stricter value check on allowed init parameters.
    
 * Makefile.am, srcpd.c: SYSCONFDIR as suggested by Guido Scholz

2004-11-03 Matthias Trute <mtrute@users.sourceforge.net>

 * varios files : made some regression tests. Improved error handling.

2004-07-20  Frank Schmischke  <frank.schmischke@t-online.de>

 * ib.c : correct logic for emergency-stop and pressing "POWER ON"-Button at IB

2004-06-13  Frank Schmischke  <frank.schmischke@t-online.de>

	* hsi-88.c: change position for calling check_reset_fb() to solve some problems

2004-05-28  Frank Schmischke  <frank.schmischke@t-online.de>

	* ib.c: process return of power on IB
	* ib.*, hsi-88.*, li100.*: make some function-names more standards-like
	* li100.*, config-srcpd.*: initialisation of LI100

2004-05-23 18:54  mborchers

	* ib.c: function changes sent by the iB are now correctly set in
	the GLSTATE struct (and correctly displayed by clients of course)

2004-05-15 22:06  mtrute

	* ddl.c, ddl_maerklin.c, srcp-gl.c: do not mix marklin and dcc
	signals, minor typos

2004-04-09 16:36  mtrute

	* config-srcpd.h, netserver.c: Minor cleanup, Busses may use there
	busnumber as a SRCP sessionid, e.g. for locking

2004-03-12 15:04  schmischi
